# rust_lib

./: README.md  build.sh
base/: .dockerignore  Dockerfile
base/foundations/: Cargo.toml
base/foundations/src/: functions.rs
services/service_1/: Cargo.toml  Dockerfile  build.sh  service_1
services/service_1/src/: main.rs
services/service_2/: .dockerignore  Cargo.toml  Dockerfile
