[package]
name = "foundations"
version = "0.1.0"
authors = ["Anthony D'Amato <anthony.damato@craft.ai>"]
edition = "2018"

[lib]
crate-type=["rlib"]

[dependencies]
clap = "2.26.0"
dogstatsd = "0.3"
env_logger = "0.6"
futures = "0.1"
log = "0.4"
rand = "0.3"
rdkafka = "0.17"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
uuid = { version = "0.5", features = ["v4"] }
